# knn-tts

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  REUSE.toml  index.html  pyproject.toml
knn_tts/: synthesizer.py  text_cleaners.py  utils.py
knn_tts/ssl/: models.py
knn_tts/ssl/WavLM/: WavLM.py  modules.py
knn_tts/tts/: models.py
knn_tts/tts/GlowTTS/: glow_tts_ssl.py
knn_tts/vc/: knn.py
knn_tts/vocoder/: models.py
knn_tts/vocoder/hifigan/: models.py  utils.py
recipes/: train_ljspeech_glow_tts_ssl.py
scripts/: extract_dataset_embeddings.py  preprocess_tts_data.py
